# sphinxcontrib-vyperlang

./: .pre-commit-config.yaml  .readthedocs.yaml  README.rst  pyproject.toml
docs/source/: conf.py  configuration.rst  domain.rst  index.rst
src/sphinxcontrib/vyperlang/: __init__.py  domain.py
src/sphinxcontrib/vyperlang/domain/: __init__.py  directives.py  indices.py
tests/: test_directives.py  test_setup.py
tests/roots/test-root/: conf.py
