[tool.poetry]
name = "sphinxcontrib-vyperlang"
version = "0.1.0"
description = ""
authors = ["Edward Amor <edward.amor3@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "sphinxcontrib", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = ">=5.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
types-docutils = "^0.19.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
sphinx = {extras = ["test"], version = "^5.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
